--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+    rel="stylesheet"
+  />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="sidebar">
+
+    </div>
+    <div class="mainevent">
+       <div class="nav">
+          <div>
+            <div>Dashboard</div>
+            <div>support</div>
+            <div>NGN</div>
+          </div>
+          <div>
+            <div>My account</div>
+            <div class="profilehold"><img src="assets/user.png" alt=""> <i class='bx bx-chevron-down'></i></div>
+          </div>
+       </div>
+    </div>
+  </body>
 </html>
