--- a/index.html
+++ b/index.html
@@ -22,16 +22,41 @@
   </head>
   <body>
     <div class="sidebar">
+     <div class="sidebar_head">
+        <h2>Preem</h2>
+        <div class="m-right">
+            <h3 class="premium">Premium <i class='bx bxs-badge-check xcv'></i></h3> 
+            <div><img class="xcv" src="assets/exchange-alt.svg" alt="">Switch account</div>
+        </div>
+     </div>
 
+     <div class="sidebar_list">
+        <div>VTU</div>
+        <div>Affiliate marketing</div>
+        <div>Post job</div>
+        <div>Tasks</div>
+        <div>Sponsor giveaway</div>
+        <div>Reports & analytics</div>
+        <div>Notifications</div>
+        <div>Profile settings</div>
+     </div>
+     <br>
+     <div class="sidebar_list_next">
+        <div>Other options</div>
+        <div>Signout</div>
+        <div>Support</div>
+        <div>Join telegram channel</div>
+     </div>
+     <div class="support_item">Help center <i class='bx bx-support'></i></div>
     </div>
     <div class="mainevent">
        <div class="nav">
-          <div>
-            <div>Dashboard</div>
-            <div>support</div>
+          <div class="flex a-c nav_1">
+            <div class="h1_text">Dashboard</div>
+            <div>Support</div>
             <div>NGN</div>
           </div>
-          <div>
+          <div class="flex a-c nav_1">
             <div>My account</div>
             <div class="profilehold"><img src="assets/user.png" alt=""> <i class='bx bx-chevron-down'></i></div>
           </div>
