--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
             <div class="profilehold"><img src="assets/user.png" alt=""> <i class='bx bx-chevron-down'></i></div>
           </div>
        </div>
+       <div class="events">
+        <div class="e1">
+            <div class="eventhold">
+        
+            </div>
+            <div class="bottomevent">
+
+            </div>
+        </div>
+  
+       </div>
     </div>
   </body>
 </html>
