--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="flex a-c nav_1">
             <div>My account</div>
-            <div class="profilehold"><img src="assets/user.png" alt=""> <i class='bx bx-chevron-down'></i></div>
+            <div class="profilehold"><img src="assets/image.jpg" alt=""> <i class='bx bx-chevron-down'></i></div>
           </div>
        </div>
        <div class="events">
