--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
       rel="stylesheet"
     />
     <link
-    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-    rel="stylesheet"
-  />
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="sidebar">
-     <div class="sidebar_head">
+      <div class="sidebar_head">
         <h2>Preem</h2>
         <div class="m-right">
-            <h3 class="premium">Premium <i class='bx bxs-badge-check xcv'></i></h3> 
-            <div><img class="xcv" src="assets/exchange-alt.svg" alt="">Switch account</div>
+          <h3 class="premium">
+            Premium <i class="bx bxs-badge-check xcv"></i>
+          </h3>
+          <div>
+            <img class="xcv" src="assets/exchange-alt.svg" alt="" />Switch
+            account
+          </div>
         </div>
-     </div>
+      </div>
 
-     <div class="sidebar_list">
+      <div class="sidebar_list">
         <div>VTU</div>
         <div>Affiliate marketing</div>
         <div>Post job</div>
@@ -39,39 +44,61 @@
         <div>Reports & analytics</div>
         <div>Notifications</div>
         <div>Profile settings</div>
-     </div>
-     <br>
-     <div class="sidebar_list_next">
+      </div>
+      <br />
+      <div class="sidebar_list_next">
         <div>Other options</div>
         <div>Signout</div>
         <div>Support</div>
         <div>Join telegram channel</div>
-     </div>
-     <div class="support_item">Help center <i class='bx bx-support'></i></div>
+      </div>
+      <div class="support_item">Help center <i class="bx bx-support"></i></div>
     </div>
     <div class="mainevent">
-       <div class="nav">
-          <div class="flex a-c nav_1">
-            <div class="h1_text">Dashboard</div>
-            <div>Support</div>
-            <div>NGN</div>
-          </div>
-          <div class="flex a-c nav_1">
-            <div>My account</div>
-            <div class="profilehold"><img src="assets/image.jpg" alt=""> <i class='bx bx-chevron-down'></i></div>
-          </div>
-       </div>
-       <div class="events">
-        <div class="e1">
-            <div class="eventhold">
-        
-            </div>
-            <div class="bottomevent">
-
-            </div>
+      <div class="nav">
+        <div class="flex a-c nav_1">
+          <div class="h1_text">Dashboard</div>
+          <div>Support</div>
+          <div>Currency</div>
         </div>
-  
-       </div>
+        <div class="flex a-c nav_1">
+          <div>My account</div>
+          <div class="profilehold">
+            <img src="assets/image.jpg" alt="" />
+            <i class="bx bx-chevron-down"></i>
+          </div>
+        </div>
+      </div>
+      <div class="events">
+        <div class="e1">
+          <div class="eventhold">
+            <div class="ev1">
+              <img src="assets/wallet.svg" alt="" /> Current earnings
+            </div>
+            <div class="ev2">
+              <h2>NGN 456,394.00</h2>
+              <div class="button_matter">Withdraw</div>
+            </div>
+          </div>
+          <div class="bottomevent"></div>
+        </div>
+        <div class="e1">
+          <div class="eventhold_1">
+            <div class="ev1 ev_text">Earnings</div>
+            <div class="ev3">
+              <div>
+                <div class="vl0">Total earnings</div>
+                <div class="vl1">NGN 2,456,394.00</div>
+              </div>
+              <div>
+                <div class="vl0">Referal commission</div>
+                <div class="vl1">NGN 30,594.00</div>
+              </div>
+            </div>
+          </div>
+          <div class="bottomevent"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
