--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
           <div class="bottomevent"></div>
         </div>
       </div>
+      <div class="otherevent">
+        <h2 class="f09">Quick actions</h2>
+     
+        <div class="h21">
+            <div class="button_matter_preem">Marketing</div>
+            <div class="button_matter_grey">Post new job</div>
+            <div class="button_matter_grey">Buy airtime</div>
+            <div class="button_matter_grey">Buy data</div>
+            <div class="button_matter_grey">View task status</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
