--- a/index.html
+++ b/index.html
@@ -101,14 +101,23 @@
       </div>
       <div class="otherevent">
         <h2 class="f09">Quick actions</h2>
-     
         <div class="h21">
-            <div class="button_matter_preem">Marketing</div>
-            <div class="button_matter_grey">Post new job</div>
-            <div class="button_matter_grey">Buy airtime</div>
-            <div class="button_matter_grey">Buy data</div>
-            <div class="button_matter_grey">View task status</div>
+          <div class="button_matter_preem">Marketing</div>
+          <div class="button_matter_grey">Post new job</div>
+          <div class="button_matter_grey">Buy airtime</div>
+          <div class="button_matter_grey">Buy data</div>
+          <div class="button_matter_grey">View task status</div>
         </div>
+      </div>
+      <div class="marketevent">
+        <div class="m99">
+          <div class="n43">
+            <h3 class="f09">Products to market</h3>
+            <span>See all</span>
+          </div>
+          <div class="m88"></div>
+        </div>
+        <div></div>
       </div>
     </div>
   </body>
