--- a/index.html
+++ b/index.html
@@ -34,24 +34,25 @@
           </div>
         </div>
       </div>
-
-      <div class="sidebar_list">
-        <div>VTU</div>
-        <div>Affiliate marketing</div>
-        <div>Post job</div>
-        <div>Tasks</div>
-        <div>Sponsor giveaway</div>
-        <div>Reports & analytics</div>
-        <div>Notifications</div>
-        <div>Profile settings</div>
-      </div>
-      <br />
-      <div class="sidebar_list_next">
-        <div>Other options</div>
-        <div>Signout</div>
-        <div>Support</div>
-        <div>Join telegram channel</div>
-      </div>
+    <div class="sidebar_slide">
+        <div class="sidebar_list">
+            <div>VTU</div>
+            <div>Affiliate marketing</div>
+            <div>Post job</div>
+            <div>Tasks</div>
+            <div>Sponsor giveaway</div>
+            <div>Reports & analytics</div>
+            <div>Notifications</div>
+            <div>Profile settings</div>
+          </div>
+          <br />
+          <div class="sidebar_list_next">
+            <div>Other options</div>
+            <div class="shift_1">Signout</div>
+            <div class="shift_1">Support</div>
+            <div class="shift_1">Join telegram channel</div>
+          </div>
+    </div>
       <div class="support_item">Help center <i class="bx bx-support"></i></div>
     </div>
     <div class="mainevent">
@@ -115,9 +116,37 @@
             <h3 class="f09">Products to market</h3>
             <span>See all</span>
           </div>
-          <div class="m88"></div>
+          <div class="m88">
+            <div class="ml1">
+              <div class="ml10">
+                <div>See details</div>
+                <i class="bx bx-up-arrow-alt"></i>
+              </div>
+              <h2 class="h1_text">MacBook pro 2024</h2>
+            </div>
+            <div class="ml0">
+              <img src="assets/product.png" alt="" />
+            </div>
+          </div>
         </div>
-        <div></div>
+        <div class="m99">
+          <div class="n43">
+            <h3 class="f09">Courses to market</h3>
+            <span>See all</span>
+          </div>
+          <div class="m88">
+            <div class="ml1">
+              <div class="ml10">
+                <div>See details</div>
+                <i class="bx bx-up-arrow-alt"></i>
+              </div>
+              <h2 class="h1_text">Cryptocurrency trading</h2>
+            </div>
+            <div class="ml0">
+              <img src="assets/course.png" alt="" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
